[tool.poetry]
name = "qa-ci"
version = "0.1.0"
description = "QA/CI image with a plethora of linters and tools."
authors = ["Flywheel <support@flywheel.io>"]
license = "MIT"
readme = "README.md"
keywords = ["Flywheel", "ci", "helm", "lint", "image"]
repository = "https://gitlab.com/flywheel-io/tools/lib/fw-storage"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"

black = "^21.6b0"
fw-logging = "^0"
hadolintw = "^1.2.1"
pre-commit = "^2.13.0"
pydocstyle = "^6.1.1"
pyyaml = "^5.4.1"
requests = "^2.26.0"
safety = "^1.10.3"
yamllint = "^1.26.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
